--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "config": "^3.3.2",
     "express": "^4.17.1",
     "mongoose": "^5.10.12",
     "nodemon": "^2.0.6"
