--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.12",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "uuid": "^8.3.1"
   }
