--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "cors": "^2.8.5",
+    "env2": "^2.2.2",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.12",
     "morgan": "^1.10.0",
