--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testBack",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "airbnb": "^0.0.2",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -22,6 +23,11 @@
     "mongoose": "^5.10.12",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "npx": "^10.2.2",
     "uuid": "^8.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1"
   }
 }
