--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "env2": "^2.2.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.12",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "npx": "^10.2.2",
+    "passport": "^0.4.1",
+    "passport-vkontakte": "^0.5.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
-    "eslint-config-airbnb": "^18.2.1"
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
